# my-gemini-langgraph-app

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/agent/: app.py  graph.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx
